--- a/tiposdeVariaveis.html
+++ b/tiposdeVariaveis.html
@@ -1,5 +1,23 @@
 <html>
     <script>
-        
+        //string
+        var modelo = "Gol";
+        var marca = 'VW';
+
+        // number 
+        var ano = 2010;
+        var valor = 20500.14;
+
+        //boolean
+        var ipvaPago = false;
+        var seguro = true;
+
+        console.log(modelo);
+        console.log(marca);
+        console.log(ano);
+        console.log(valor);
+        console.log(ipvaPago);
+        console.log(seguro);
+
     </script>
 </html>
